--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -65,13 +65,11 @@
     <string name="restrict_shell">Терминал (команди, суперпотребител)</string>
     <string name="restrict_system">Система (инсталирани приложения)</string>
     <string name="restrict_view">Преглед (браузър)</string>
-    <string name="title_category">Category:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Отбележи за ограничаване:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">No active filter</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
