--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -63,13 +63,11 @@
     <string name="restrict_shell">Shell (kommandoer, superbruger)</string>
     <string name="restrict_system">System (installerede apps)</string>
     <string name="restrict_view">Vis (browser)</string>
-    <string name="title_category">Kategori:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Markér for at blokere:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Intet aktivt filter</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 aktivt filter</item>
         <item quantity="other">%d aktive filtre</item>
     </plurals>
