--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -65,13 +65,11 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="restrict_shell">Shell (commandes, root)</string>
     <string name="restrict_system">Système (applis installées)</string>
     <string name="restrict_view">Vue (navigateur)</string>
-    <string name="title_category">Catégorie :</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Cocher pour restreindre :</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Pas de filtre actif</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 filtre actif</item>
         <item quantity="other">%d filtres actifs</item>
     </plurals>
