--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -65,13 +65,11 @@
     <string name="restrict_shell">Lupina (ukazi, superuser)</string>
     <string name="restrict_system">Sistem (nameščeni programi)</string>
     <string name="restrict_view">Pogled (brskalnik)</string>
-    <string name="title_category">Kategorija:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Označi za omejitev pravic:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Ni aktivnih filtrov</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 aktiven filter</item>
         <item quantity="two">%d aktivna filtra</item>
         <item quantity="few">%d aktivni filtri</item>
