--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -63,13 +63,11 @@
     <string name="restrict_shell">Intèrpret d\'ordres (ordres, superusuari)</string>
     <string name="restrict_system">Sistema (aplicacions instal·lades)</string>
     <string name="restrict_view">Vista (navegador)</string>
-    <string name="title_category">Categoria:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Activa per a restringir:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Cap filtre actiu</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 filtre actiu</item>
         <item quantity="other">%d filtres actius</item>
     </plurals>
