--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -65,13 +65,11 @@
     <string name="restrict_shell">Shell (Kommandos, Superuser)</string>
     <string name="restrict_system">System (installierte Apps)</string>
     <string name="restrict_view">Anzeigen (mittels Browser)</string>
-    <string name="title_category">Kategorie:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Zum Beschränken markieren:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Kein Filter ausgewählt</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 Filter ausgewählt</item>
         <item quantity="other">%d Filter ausgewählt</item>
     </plurals>
