--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -65,13 +65,11 @@
     <string name="restrict_shell">Shell (εντολές, superuser)</string>
     <string name="restrict_system">Σύστημα (εγκατεστημένες εφαρμογές)</string>
     <string name="restrict_view">Εμφάνιση (browser)</string>
-    <string name="title_category">Κατηγορία:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">No active filter</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
