--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -67,13 +67,11 @@
     <string name="restrict_shell">شل (فرامین، ابر کاربر)</string>
     <string name="restrict_system">سیستم (نرم افزارهای نصب شده)</string>
     <string name="restrict_view">نما (مرورگر)</string>
-    <string name="title_category">نوع:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">برای محدود شدن انتخاب کنید:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">فیلتر فعالی وجود ندارد</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
