--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -65,13 +65,11 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">מערכת (יישומים מותקנים)</string>
     <string name="restrict_view">גישה (דפדפן)</string>
-    <string name="title_category">קטגוריה:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">בחר להגביל:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">No active filter</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
