--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -65,13 +65,11 @@
     <string name="restrict_shell">シェル (コマンド, Superuser)</string>
     <string name="restrict_system">システム (インストール済みアプリ)</string>
     <string name="restrict_view">表示 (ブラウザ)</string>
-    <string name="title_category">カテゴリ:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">チェックで制限:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">フィルタなし</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1個のフィルタ適用中</item>
         <item quantity="other">%d個のフィルタ適用中</item>
     </plurals>
