--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -65,13 +65,11 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_shell">Vykdymas (komandos, superuser)</string>
     <string name="restrict_system">Sistema (įdiegtos programos)</string>
     <string name="restrict_view">Peržiūra (Naršyklė)</string>
-    <string name="title_category">Kategorija:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Žiūrėti leidimus:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Nėra aktyvių filtrų</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 aktyvus filtras</item>
         <item quantity="other">%d aktyvūs filtrai</item>
     </plurals>
