--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -65,13 +65,11 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="restrict_shell">Shell (opdrachten, superuser)</string>
     <string name="restrict_system">Systeem (geïnstalleerde apps)</string>
     <string name="restrict_view">Tonen (browser)</string>
-    <string name="title_category">Categorie:</string>
-    <string name="title_categories">Categories</string>
+    <string name="title_categories">Categorieën</string>
     <string name="title_restrict">Vink aan om te beperken:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Geen filters actief</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 filter actief</item>
         <item quantity="other">%d filters actief</item>
     </plurals>
