--- a/res/values-no-rNO/strings.xml
+++ b/res/values-no-rNO/strings.xml
@@ -63,13 +63,11 @@
     <string name="restrict_shell">Shell (kommandoer, superbruker)</string>
     <string name="restrict_system">System (installerte apper)</string>
     <string name="restrict_view">Betrakte (nettleser)</string>
-    <string name="title_category">Kategori:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Marker for å blokkere:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Ingen filter aktivert</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 filter aktivert</item>
         <item quantity="other">%d filter aktivert</item>
     </plurals>
