--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -65,13 +65,11 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_shell">Interfata (Shell) (comenzi, superuser)</string>
     <string name="restrict_system">Sistem (aplicatii instalate)</string>
     <string name="restrict_view">Acces browser</string>
-    <string name="title_category">Category:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Bifeaza pentru a restrictiona:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">No active filter</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
