--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -64,13 +64,11 @@
     <string name="restrict_shell">Kabuk (komutlar, superuser)</string>
     <string name="restrict_system">Sistem (yüklü uygulamalar)</string>
     <string name="restrict_view">Göster (tarayıcı)</string>
-    <string name="title_category">Kategori:</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Engellemek için işaretle:</string>
     <string name="title_filters">Filters</string>
-    <string name="title_nofilter">Etkin filtre yok</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 etkin filtre</item>
         <item quantity="other">%d etkin filtre</item>
     </plurals>
