--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -39,7 +39,7 @@
     <string name="msg_done">Atlikta</string>
     <string name="msg_reboot">Privaloma perkrauti prietaisą</string>
     <string name="msg_random_now">Atsitiktiniai duomenys</string>
-    <string name="msg_random_access">Randomize on access</string>
+    <string name="msg_random_access">Atsitiktiniai duomenys prieeigai</string>
     <string name="msg_random_boot">Atsitiktiniai duomenys po perkrovimo</string>
     <string name="msg_first"><b>Puiku, kad sutikote išbandyti XPrivacy.
 Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietaisu.
@@ -93,9 +93,9 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_operator">Operatorius</string>
     <string name="settings_subscriber">Abonento ID</string>
     <string name="settings_ua">Vartotojo agentas</string>
-    <string name="settings_general">General</string>
-    <string name="settings_fake_data">Fake data</string>
-    <string name="settings_global">Use global fake data</string>
+    <string name="settings_general">Bendras</string>
+    <string name="settings_fake_data">Netikri duomenys</string>
+    <string name="settings_global">Naudoti globalius netikrus duomenis</string>
     <string name="settings_notify">Atnaujinimų Pranesimas</string>
     <string name="settings_usage">Android naudojimo duomenys (reikia paleisti iš naujo)</string>
     <string name="settings_extra">Papildomi naudojimo duomenys (reikia paleisti iš naujo)</string>
