--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -6,29 +6,30 @@
     <string name="app_version" formatted="false">XPrivacy versija: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed sistemos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    
     <string name="menu_usage">Leidimų naudojimas</string>
     <string name="menu_refresh">Atnaujinti</string>
     <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Šablonai</string>
     <string name="menu_report">Pranešti apie problemą</string>
-    <string name="menu_export">Exportuoti parametrus</string>
-    <string name="menu_import">Importuoti parametrus</string>
+    <string name="menu_export">Exportuoti</string>
+    <string name="menu_import">Importuoti</string>
     <string name="menu_submit">Pateikti leidimus</string>
     <string name="menu_fetch">Apriboti leidimus</string>
     <string name="menu_theme">Keisti temą</string>
     <string name="menu_pro">Pro versija aktyvi</string>
-    <string name="menu_about">Apie XPrivacy</string>
+    <string name="menu_about">Apie</string>
     <string name="menu_help">Pagalba</string>
-    <string name="menu_all">Visi leidimai</string>
+    <string name="menu_all">Visi</string>
     <string name="menu_restriction_all">Toggle restrictions</string>
     <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Taikyti šabloną</string>
-    <string name="menu_clear">Išvalyti leidimus</string>
-    <string name="menu_app_launch">Paleisti programą</string>
+    <string name="menu_clear">Išvalyti</string>
+    <string name="menu_app_launch">Paleisti</string>
     <string name="menu_app_settings">Programos informacija</string>
-    <string name="menu_app_store">Play Store parduotuvė</string>
+    <string name="menu_app_store">Google play</string>
     <string name="menu_accounts">Leisti pažymėtas paskyras</string>
-    <string name="menu_applications">Select applications to allow</string>
+    <string name="menu_applications">Leisti pažymėtas programas</string>
     <string name="menu_contacts">Leisti pažymėtus kontaktus</string>
     <string name="msg_new">Naujas</string>
     <string name="msg_update">Atnaujinta</string>
@@ -39,7 +40,7 @@
     <string name="msg_done">Atlikta</string>
     <string name="msg_reboot">Privaloma perkrauti prietaisą</string>
     <string name="msg_random_now">Atsitiktiniai duomenys</string>
-    <string name="msg_random_access">Atsitiktiniai duomenys prieeigai</string>
+    <string name="msg_random_access">Atsitiktiniai duomenys po prieeigai</string>
     <string name="msg_random_boot">Atsitiktiniai duomenys po perkrovimo</string>
     <string name="msg_first"><b>Puiku, kad sutikote išbandyti XPrivacy.
 Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietaisu.
@@ -65,9 +66,9 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_shell">Vykdymas (komandos, superuser)</string>
     <string name="restrict_system">Sistema (įdiegtos programos)</string>
     <string name="restrict_view">Peržiūra (Naršyklė)</string>
-    <string name="title_categories">Categories</string>
+    <string name="title_categories">Kategorijos</string>
     <string name="title_restrict">Žiūrėti leidimus:</string>
-    <string name="title_filters">Filters</string>
+    <string name="title_filters">Filtrai</string>
 
     <plurals name="title_active_filters">
         <item quantity="one">1 aktyvus filtras</item>
@@ -86,7 +87,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_lon">Ilguma</string>
     <string name="settings_mac">MAC adresas</string>
     <string name="settings_ip">IP addresas</string>
-    <string name="settings_phone">Telefono numeris</string>
+    <string name="settings_phone">Telefono nr.</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_adid">Reklamos ID</string>
     <string name="settings_country">Šalis</string>
@@ -106,6 +107,6 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="help_granted">Android leidimai</string>
     <string name="help_used">Privačių duomenų leidimai</string>
     <string name="help_frozen">Išjungtų programų leidimai</string>
-    <string name="help_dangerous">Pavojingi leidimai</string>
+    <string name="help_dangerous">Pavojingi leidimai, apribojus, gali sukelti problemų</string>
 
 </resources>
