--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -2,10 +2,10 @@
 
     <string name="app_notxposed" formatted="false">Xposed framework versio %d+ ei ole asennettu</string>
     <string name="app_notenabled">XPrivacy ei ole enabloitu Xposed asennusohjelmassa</string>
-    <string name="app_wrongandroid">Vain Android versiolle 4.0+</string>
+    <string name="app_wrongandroid">Vain Android versiolle 4.0.3+</string>
     <string name="app_version" formatted="false">XPrivacy versio: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework versio: %d</string>
-    <string name="app_copyright">Tekijänoikeus \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Tekijänoikeus \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="menu_usage">Käyttötiedot</string>
     <string name="menu_refresh">Päivitä</string>
     <string name="menu_settings">Asetukset</string>
@@ -61,25 +61,25 @@
     <string name="restrict_phone">Puhelin (ID, numerot, puhelut)</string>
     <string name="restrict_sensors">Sensorit</string>
     <string name="restrict_storage">Muisti (media, SD-kortti)</string>
-    <string name="restrict_shell">Shell (komennot, superuser)</string>
+    <string name="restrict_shell">Komentorivi (komennot, superuser)</string>
     <string name="restrict_system">Järjestelmä (asennetut ohjelmat)</string>
     <string name="restrict_view">Katso (selaimessa)</string>
-    <string name="title_categories">Categories</string>
+    <string name="title_category">Kategoria:</string>
     <string name="title_restrict">Valitse rajoittaaksesi:</string>
-    <string name="title_filters">Filters</string>
+    <string name="title_nofilter">Ei aktiivisia suodattimia</string>
 
-    <plurals name="title_active_filters">
+    <plurals name="title_filters">
         <item quantity="one">1 aktiivinen suodatin</item>
         <item quantity="other">%d aktiivista suodatinta</item>
     </plurals>
 
-    <string name="title_fused">Suodata datan käytössä</string>
-    <string name="title_finternet">Suodata internet yhteydessä</string>
-    <string name="title_fpermission">Suodata käyttöoikeuksissa</string>
-    <string name="title_frestricted">Suodata rajoitetuissa</string>
-    <string name="title_fuser">Suodata käyttäjän applikaatioissa</string>
-    <string name="title_fsystem">Suodata järjestelmän applikaatioissa</string>
-    <string name="title_fnot">Kiellä</string>
+    <string name="title_fused">Suodata datan käyttöön</string>
+    <string name="title_finternet">Suodata internet yhteyksiin</string>
+    <string name="title_fpermission">Suodata käyttöoikeuksiin</string>
+    <string name="title_frestricted">Suodata rajoitettuihin</string>
+    <string name="title_fuser">Suodata käyttäjän applikaatioihin</string>
+    <string name="title_fsystem">Suodata järjestelmän applikaatioihin</string>
+    <string name="title_fnot">invertoi</string>
     <string name="settings_serial">sarjanumero#</string>
     <string name="settings_lat">Latituudi</string>
     <string name="settings_lon">Longituudi</string>
@@ -99,12 +99,12 @@
     <string name="settings_usage">Androidin käyttötiedot (vaatii uudelleenkäynnistyksen)</string>
     <string name="settings_extra">Tarkemmat käyttötiedot (vaatii uudelleenkäynnistyksen)</string>
     <string name="settings_log">Debuggaus logi (vaatii uudelleenkäynnistyksen)</string>
-    <string name="settings_expert">Expert moodi</string>
+    <string name="settings_expert">Expert tila</string>
     <string name="help_application">Applikaatio</string>
     <string name="help_internet">on internet käyttöoikeus</string>
     <string name="help_granted">on Android käyttöoikeus</string>
     <string name="help_used">on käyttänyt tätä dataa</string>
-    <string name="help_frozen">on poistettu</string>
+    <string name="help_frozen">on disabloitu</string>
     <string name="help_dangerous">on vaarallinen, rajoitus voi aiheuttaa ongelmia</string>
 
 </resources>
