Fix Finnish translation

--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -64,11 +64,11 @@
     <string name="restrict_shell">Komentorivi (komennot, superuser)</string>
     <string name="restrict_system">Järjestelmä (asennetut ohjelmat)</string>
     <string name="restrict_view">Katso (selaimessa)</string>
-    <string name="title_category">Kategoria:</string>
+    <string name="title_categories">Categories</string>
     <string name="title_restrict">Valitse rajoittaaksesi:</string>
-    <string name="title_nofilter">Ei aktiivisia suodattimia</string>
+    <string name="title_filters">Filters</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 aktiivinen suodatin</item>
         <item quantity="other">%d aktiivista suodatinta</item>
     </plurals>
