--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -23,7 +23,7 @@
     <string name="menu_restriction_all">全选/不选列表中的应用</string>
     <string name="menu_usage_all">过滤器开关</string>
     <string name="menu_apply">套用默认权限模板</string>
-    <string name="menu_clear">清除默认权限模板</string>
+    <string name="menu_clear">清除所有权限限制</string>
     <string name="menu_app_launch">启动应用</string>
     <string name="menu_app_settings">应用信息</string>
     <string name="menu_app_store">Play 商店</string>
