Updated Vietnamses translations

--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -11,24 +11,24 @@
     <string name="menu_settings">Thiết lập</string>
     <string name="menu_template">Thiết lập mẫu (cho ứng dụng mới)</string>
     <string name="menu_report">Báo cáo lỗi</string>
-    <string name="menu_export">Xuất</string>
-    <string name="menu_import">Nhập</string>
-    <string name="menu_submit">Áp dung thiết lập</string>
+    <string name="menu_export">Xuất thông tin cấu hình</string>
+    <string name="menu_import">Nhập thông tin cấu hình</string>
+    <string name="menu_submit">Áp dụng thiết lập</string>
     <string name="menu_fetch">Lấy thông tin thiết lập</string>
     <string name="menu_theme">Đổi giao diện</string>
     <string name="menu_pro">Phiên bản Pro</string>
     <string name="menu_about">Giới thiệu</string>
     <string name="menu_help">Trợ giúp</string>
     <string name="menu_all">Tất cả</string>
-    <string name="menu_restriction_all">Toggle restrictions</string>
-    <string name="menu_usage_all">Toggle filter</string>
+    <string name="menu_restriction_all">Thay đổi các sự hạn chế</string>
+    <string name="menu_usage_all">Thay đổi bộ lọc</string>
     <string name="menu_apply">Áp dụng thiết lập mẫu</string>
     <string name="menu_clear">Xóa thiết lập</string>
     <string name="menu_app_launch">Mở ứng dụng</string>
     <string name="menu_app_settings">Chi tiết ứng dụng</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Chọn tài khoản cho phép</string>
-    <string name="menu_applications">Select applications to allow</string>
+    <string name="menu_applications">Chọn ứng dụng để cấp phép</string>
     <string name="menu_contacts">Chọn liên lạc cho phép</string>
     <string name="msg_new">Mới</string>
     <string name="msg_update">Cập nhật</string>
@@ -39,7 +39,7 @@
     <string name="msg_done">Xong</string>
     <string name="msg_reboot">Yêu cầu khởi động lại thiết bị</string>
     <string name="msg_random_now">Ngẫu nhiên</string>
-    <string name="msg_random_access">Randomize on access</string>
+    <string name="msg_random_access">Ngẫu nhiên lúc truy cập</string>
     <string name="msg_random_boot">Tạo thông tin ngẫu nhiên khi khởi động</string>
     <string name="msg_first"><b>XPrivacy đã được lập trình và kiểm tra một cách cẩn trọng nhất, tuy nhiên, không thể đảm bảo chắc chắn XPrivacy sẽ hoạt động trơn tru trên mọi thiết bị cũng như với mọi ứng dụng.
 \n\nBạn tự chịu trách nhiệm khi sử dụng ứng dụng này.</b>\n\nXem thêm về bản quyền:</string>
@@ -47,7 +47,7 @@
     <string name="restrict_browser">Trình duyệt (bookmarks/history)</string>
     <string name="restrict_calendar">Lịch</string>
     <string name="restrict_calling">Gọi điện (điện thoại, SMS, MMS)</string>
-    <string name="restrict_clipboard">Clipboard</string>
+    <string name="restrict_clipboard">Bộ nhớ đệm</string>
     <string name="restrict_contacts">Danh bạ</string>
     <string name="restrict_dictionary">Từ điển (người dùng)</string>
     <string name="restrict_email">E-mail</string>
@@ -64,9 +64,9 @@
     <string name="restrict_shell">Shell (câu lệnh, superuser)</string>
     <string name="restrict_system">Hệ thống (các ứng dụng)</string>
     <string name="restrict_view">Mở trình duyệt</string>
-    <string name="title_categories">Categories</string>
+    <string name="title_categories">Danh mục</string>
     <string name="title_restrict">Đánh dấu để hạn chế:</string>
-    <string name="title_filters">Filters</string>
+    <string name="title_filters">Các bộ lọc</string>
 
     <plurals name="title_active_filters">
         <item quantity="one">1 bộ lọc có hiệu lực</item>
@@ -87,19 +87,19 @@
     <string name="settings_ip">Địa chỉ IP</string>
     <string name="settings_phone">Số điện thoại</string>
     <string name="settings_id">Android ID</string>
-    <string name="settings_adid">Advertisement ID</string>
+    <string name="settings_adid">ID quảng cáo</string>
     <string name="settings_country">Nước</string>
     <string name="settings_operator">Nhà mạng</string>
     <string name="settings_subscriber">ID người đăng kí</string>
     <string name="settings_ua">Nhận dạng trình duyệt</string>
-    <string name="settings_general">General</string>
-    <string name="settings_fake_data">Fake data</string>
-    <string name="settings_global">Use global fake data</string>
-    <string name="settings_notify">Update notifications</string>
-    <string name="settings_usage">Mức sử dụng hệ thống (yêu cầu khởi động lại)</string>
-    <string name="settings_extra">Extra usage data (requires restart)</string>
-    <string name="settings_log">Nhật ký lỗi (yêu cầu khởi động lại)</string>
-    <string name="settings_expert">Expert mode</string>
+    <string name="settings_general">Cài đặt chung</string>
+    <string name="settings_fake_data">Dữ liệu giả</string>
+    <string name="settings_global">Sử dụng dữ liệu giả chung</string>
+    <string name="settings_notify">Cập nhật thông báo</string>
+    <string name="settings_usage">Mức sử dụng hệ thống (cần khởi động lại)</string>
+    <string name="settings_extra">Sử dụng dữ liệu phụ (cần khởi động lại)</string>
+    <string name="settings_log">Nhật ký lỗi (cần khởi động lại)</string>
+    <string name="settings_expert">Chế độ nâng cao</string>
     <string name="help_application">Ứng dụng</string>
     <string name="help_internet">có quyền truy cập mạng</string>
     <string name="help_granted">có các quyền của hệ điều hành</string>
