--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -39,7 +39,7 @@
     <string name="msg_done">إنتهى</string>
     <string name="msg_reboot">يحتاج إعادة تشغيل</string>
     <string name="msg_random_now">عشوائي</string>
-    <string name="msg_random_access">Randomize on access</string>
+    <string name="msg_random_access">عشوائية الوصول</string>
     <string name="msg_random_boot">عشوائي بعد الإقلاع</string>
     <string name="msg_first"><b>بُذلت عناية كبيرة لتطوير وإختبار XPrivacy,
 ومع ذلك فإنه من المستحيل ضمان أنه سيعمل خالياً من العيوب على كل جهاز ولكل تطبيق.
@@ -65,9 +65,9 @@
     <string name="restrict_shell">سطر الأوامر (الأوامر,المستخدم الجذر)</string>
     <string name="restrict_system">النظام (البرامج المنزلة)</string>
     <string name="restrict_view">تصفح (المتصفح)</string>
-    <string name="title_categories">Categories</string>
+    <string name="title_categories">الفئات</string>
     <string name="title_restrict">إختر للتقيد:</string>
-    <string name="title_filters">Filters</string>
+    <string name="title_filters">فلاتر</string>
 
     <plurals name="title_active_filters">
         <item quantity="one">1 فلتر نشط</item>
@@ -93,12 +93,12 @@
     <string name="settings_operator">المُشغل</string>
     <string name="settings_subscriber">IMSI(الهوية العالمية لمشتركي الهواتف)</string>
     <string name="settings_ua">وكيل المستخدم</string>
-    <string name="settings_general">General</string>
-    <string name="settings_fake_data">Fake data</string>
-    <string name="settings_global">Use global fake data</string>
+    <string name="settings_general">عام</string>
+    <string name="settings_fake_data">بيانات وهمية</string>
+    <string name="settings_global">إستخدام بيانات وهمية عامة</string>
     <string name="settings_notify">تحديث الإشعارات</string>
     <string name="settings_usage">بيانات إستخدام الأندرويد (يتطلب إعادة التشغيل)</string>
-    <string name="settings_extra">Extra usage data (requires restart)</string>
+    <string name="settings_extra">بيانات إستخدام إضافية (يتطلب إعادة التشغيل)</string>
     <string name="settings_log"> سِجِل تصحيح الأخطاء (يتطلب إعادة التشغيل) </string>
     <string name="settings_expert">وضع الخبراء</string>
     <string name="help_application">التطبيق</string>
