Separate setting to enable restricting dangerous functions

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -101,6 +101,7 @@
     <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Debug log (richiede riavvio)</string>
     <string name="settings_expert">Expert mode</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">Applicazione</string>
     <string name="help_internet">ha permesso internet</string>
     <string name="help_granted">ha permesso Android</string>
