--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -101,6 +101,7 @@
     <string name="settings_extra">بيانات إستخدام إضافية (يتطلب إعادة التشغيل)</string>
     <string name="settings_log"> سِجِل تصحيح الأخطاء (يتطلب إعادة التشغيل) </string>
     <string name="settings_expert">وضع الخبراء</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">التطبيق</string>
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
