--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -99,6 +99,7 @@
     <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Registre de depuració (cal reiniciar)</string>
     <string name="settings_expert">Expert mode</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">Aplicació</string>
     <string name="help_internet">té permís d\'Internet</string>
     <string name="help_granted">té permisos d\'Android</string>
