--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -99,6 +99,7 @@
     <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Debug-log (kræver genstart)</string>
     <string name="settings_expert">Expert mode</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">App</string>
     <string name="help_internet">har internettilladelse</string>
     <string name="help_granted">har Android-tilladelse</string>
