--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -101,6 +101,7 @@
     <string name="settings_extra">Extra Usage-Data (erfordert Geräteneustart)</string>
     <string name="settings_log">Debug-Log (erfordert Geräteneustart)</string>
     <string name="settings_expert">Experten-Modus</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
