--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -101,6 +101,7 @@ sin embargo es imposible garantizar que funcione impecable en todos y cada uno d
     <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Registro de depuración (requiere inicio)</string>
     <string name="settings_expert">Expert mode</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">Aplicación</string>
     <string name="help_internet">Tiene permisos para Internet</string>
     <string name="help_granted">Tiene permisos por Android</string>
