--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -101,6 +101,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Debug log (redémarrage nécessaire)</string>
     <string name="settings_expert">Expert mode</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
