--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -101,6 +101,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Debug log (requires restart)</string>
     <string name="settings_expert">Expert mode</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">Aplicatie</string>
     <string name="help_internet">are permisiune Internet</string>
     <string name="help_granted">are permisiune Android</string>
