--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -113,6 +113,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Debug log (requires restart)</string>
     <string name="settings_expert">Expert mode</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
     <string name="help_granted">has Android permission</string>
